crates/tensor-wasm-cli/tests/snapshots/help_snapshots__completions.snap
---
source: crates/tensor-wasm-cli/tests/help_snapshots.rs
assertion_line: 73
expression: "help(&[\"completions\", \"--help\"])"
---
Emit shell completion scripts for the named shell

Usage: tensor-wasm completions [OPTIONS] <SHELL>

Arguments:
  <SHELL>  Target shell (bash, zsh, fish, powershell, elvish) [possible values: bash, elvish, fish, powershell, zsh]

Options:
      --tenant <TENANT>  Tenant id to advertise on outbound API requests via `X-TensorWasm-Tenant`. Zero (the default) suppresses the header for backwards compatibility [default: 0]
  -h, --help             Print help
