crates/tensor-wasm-cli/tests/snapshots/help_snapshots__snapshot_restore.snap
---
source: crates/tensor-wasm-cli/tests/help_snapshots.rs
assertion_line: 65
expression: "help(&[\"snapshot\", \"restore\", \"--help\"])"
---
Restore an instance from a `.tensor-wasm` archive via the API

Usage: tensor-wasm snapshot restore [OPTIONS] --input <INPUT> --as-instance <AS_INSTANCE> --server <SERVER>

Options:
      --input <INPUT>
          Path to the `.tensor-wasm` archive to upload
      --tenant <TENANT>
          Tenant id to advertise on outbound API requests via `X-TensorWasm-Tenant`. Zero (the default) suppresses the header for backwards compatibility [default: 0]
      --as-instance <AS_INSTANCE>
          Identifier to assign to the restored instance
      --server <SERVER>
          Base URL of the target TensorWasm server (e.g. `http://localhost:8080`)
      --max-archive-bytes <MAX_ARCHIVE_BYTES>
          Maximum *on-disk archive* size the CLI will upload, in bytes (default 256 MiB). This bounds the compressed payload only — the decompressed footprint is enforced server-side and may be much larger. The deprecated alias `--max-decompressed` is accepted for one release; prefer `--max-archive-bytes` in new scripts [default: 268435456]
  -h, --help
          Print help
